turbopack/crates/turbopack-tests/tests/snapshot/mdx/error/output/turbopack_crates_turbopack-tests_tests_snapshot_mdx_error_input_index_0de01e.js
(globalThis.TURBOPACK = globalThis.TURBOPACK || []).push([
    "output/turbopack_crates_turbopack-tests_tests_snapshot_mdx_error_input_index_0de01e.js",
    {},
    {"otherChunks":["output/turbopack_crates_turbopack-tests_tests_snapshot_mdx_error_input_index_7ab1bf.js"],"runtimeModuleIds":["/[project]/turbopack/crates/turbopack-tests/tests/snapshot/mdx/error/input/index.js [test] (ecmascript)"]}
]);
// Dummy runtime